--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Video TV</title>
+    <title>Car Video Pro M3U Player</title>
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,15 +26,29 @@
                 <!-- Added 'muted' to ensure autoplay on page load -->
                 <video id="videoPlayer" controls muted></video>
             </div>
-            <div id="selectedChannelInfo" class="selected-channel-info">
-                <img id="selectedChannelLogo" src="placeholder.png" alt="Channel Logo">
-                <span id="selectedChannelName">No Channel Selected</span>
-            </div>
 
-            <button id="unmuteOverlayBtn" class="unmute-btn hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16"><path d="M6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.393-1.89a.5.5 0 0 1 .5-.05zM8 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 4zm3 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5z"/></svg>
-                Sesi Aç
-            </button>
+            <div class="player-controls-bar">
+                <!-- This part stays the same -->
+                <div id="selectedChannelInfo" class="selected-channel-info">
+                    <img id="selectedChannelLogo" src="placeholder.png" alt="Channel Logo">
+                    <span id="selectedChannelName">No Channel Selected</span>
+                </div>
+
+                <!-- NEW: A group for the action buttons -->
+                <div class="player-buttons-group">
+                    <!-- The "Sesi Aç" button is MOVED here -->
+                    <button id="unmuteOverlayBtn" class="action-btn hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16"><path d="M6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.393-1.89a.5.5 0 0 1 .5-.05zM8 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 4zm3 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5z"/></svg>
+                        Sesi Aç
+                    </button>
+
+                    <!-- The Fullscreen button is UPDATED here -->
+                    <button id="fullscreenBtn" class="action-btn" title="Tam Ekran">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16"><path d="M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1h-4zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5zM.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5z"/></svg>
+                        Tam Ekran
+                    </button>
+                </div>
+            </div>
         </div>
 
         <div class="right-panel">
