--- a/index.html
+++ b/index.html
@@ -7,15 +7,78 @@
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <style>
     :root {
-        /* Boyutlar küçültüldü */
         --player-height: 55px;
         --category-bar-height: 40px;
     }
+
+    /* TEMA RENK DEĞİŞKENLERİ */
+    [data-theme='default'] {
+        --bg-primary: #000;
+        --bg-secondary: #121212;
+        --bg-tertiary: #1e1e1e;
+        --bg-hover: #2c2c2c;
+        --border-color: #333;
+        --accent-color: #3366cc;
+        --accent-color-darker: #252a3a;
+        --text-primary: #fff;
+        --text-secondary: #aaa;
+        --epg-color: turquoise;
+    }
+    [data-theme='forest'] {
+        --bg-primary: #0a0a0a;
+        --bg-secondary: #1a2e24;
+        --bg-tertiary: #2d4036;
+        --bg-hover: #3c5246;
+        --border-color: #444;
+        --accent-color: #4CAF50; /* Yeşil */
+        --accent-color-darker: #388E3C;
+        --text-primary: #e0e0e0;
+        --text-secondary: #b0b0b0;
+        --epg-color: #81C784;
+    }
+    [data-theme='royal'] {
+        --bg-primary: #0d0c1d;
+        --bg-secondary: #1c1a3a;
+        --bg-tertiary: #2e2c5b;
+        --bg-hover: #3c3a6d;
+        --border-color: #4a477a;
+        --accent-color: #9C27B0; /* Mor */
+        --accent-color-darker: #7B1FA2;
+        --text-primary: #f3e5f5;
+        --text-secondary: #ce93d8;
+        --epg-color: #ba68c8;
+    }
+    [data-theme='sunset'] {
+        --bg-primary: #1b120f;
+        --bg-secondary: #3d2c26;
+        --bg-tertiary: #5d4037;
+        --bg-hover: #6d4c41;
+        --border-color: #4e342e;
+        --accent-color: #FF5722; /* Turuncu */
+        --accent-color-darker: #E64A19;
+        --text-primary: #fff3e0;
+        --text-secondary: #ffccbc;
+        --epg-color: #ff8a65;
+    }
+    [data-theme='steel'] {
+        --bg-primary: #121212;
+        --bg-secondary: #222222;
+        --bg-tertiary: #333333;
+        --bg-hover: #444444;
+        --border-color: #555;
+        --accent-color: #757575; /* Gri */
+        --accent-color-darker: #616161;
+        --text-primary: #f5f5f5;
+        --text-secondary: #bdbdbd;
+        --epg-color: #9e9e9e;
+    }
+
+
     * { box-sizing: border-box; }
     html, body {
-      margin: 0; height: 100%; background: #000; font-family: sans-serif; overflow: hidden;
-      color: white;
-      font-size: 14px; /* Ana font boyutu küçültüldü */
+      margin: 0; height: 100%; background: var(--bg-primary); font-family: sans-serif; overflow: hidden;
+      color: var(--text-primary);
+      font-size: 14px;
     }
     #app {
       display: flex; flex-direction: column; height: 100%;
@@ -25,19 +88,19 @@
       display: flex; flex: 1; overflow: hidden;
     }
     #channels {
-      flex: 0 0 260px; /* Kanal listesi genişliği azaltıldı */
-      background: #121212;
-      border-right: 2px solid #333;
+      flex: 0 0 260px;
+      background: var(--bg-secondary);
+      border-right: 2px solid var(--border-color);
       overflow-y: auto;
-      padding: 8px; /* İç boşluk azaltıldı */
-      display: flex; flex-direction: column; gap: 6px; /* Aralık azaltıldı */
+      padding: 8px;
+      display: flex; flex-direction: column; gap: 6px;
     }
     #previewArea {
         flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background: #000;
+        background: var(--bg-primary);
     }
     #previewPlaceholder {
         padding: 20px;
@@ -54,81 +117,87 @@
     #previewPlaceholder p { font-size: 1em; }
 
     #previewVideo {
-        width: 100%;
-        height: 100%;
-        background: #000;
-        object-fit: contain;
-        display: none;
+        width: 100%; height: 100%;
+        background: #000; object-fit: contain; display: none;
     }
     
-    /* Kategori Çubuğu */
     #groups {
         position: fixed;
-        bottom: var(--player-height);
-        left: 0;
-        width: 100%;
-        height: var(--category-bar-height);
-        background: #101010;
-        border-top: 1px solid #333;
-        display: flex;
-        overflow-x: auto;
-        z-index: 1000;
-        scrollbar-width: thin;
-        scrollbar-color: #555 #101010;
+        bottom: var(--player-height); left: 0; width: 100%; height: var(--category-bar-height);
+        background: var(--bg-secondary);
+        border-top: 1px solid var(--border-color);
+        display: flex; overflow-x: auto; z-index: 1000;
+        scrollbar-width: thin; scrollbar-color: var(--accent-color) var(--bg-secondary);
     }
     #groups::-webkit-scrollbar { height: 6px; }
-    #groups::-webkit-scrollbar-track { background: #101010; }
-    #groups::-webkit-scrollbar-thumb { background-color: #555; border-radius: 10px; }
+    #groups::-webkit-scrollbar-track { background: var(--bg-secondary); }
+    #groups::-webkit-scrollbar-thumb { background-color: var(--accent-color); border-radius: 10px; }
 
     .group {
-      padding: 0 18px; /* Boşluk azaltıldı */
-      cursor: pointer;
-      background: transparent;
-      border-right: 1px solid #333;
+      padding: 0 18px; cursor: pointer; background: transparent;
+      border-right: 1px solid var(--border-color);
       line-height: var(--category-bar-height);
-      white-space: nowrap;
-      flex-shrink: 0;
+      white-space: nowrap; flex-shrink: 0;
       transition: background-color 0.2s;
     }
     .group:hover, .group.active {
-      background: #3366cc;
+      background: var(--accent-color);
     }
 
     .channel {
-      display: flex; align-items: center; gap: 8px; /* Aralık azaltıldı */
-      background: #1e1e1e;
-      border-radius: 6px; /* Kenar yuvarlaklığı azaltıldı */
-      padding: 8px; /* İç boşluk azaltıldı */
-      cursor: pointer;
+      display: flex; align-items: center; gap: 8px;
+      background: var(--bg-tertiary);
+      border-radius: 6px; padding: 8px; cursor: pointer;
       border: 1px solid transparent;
       transition: all 0.2s;
     }
-    .channel:hover { background: #2c2c2c; }
-    .channel.active { border-color: #3366cc; background: #252a3a; }
-    .channel img { width: 38px; height: 38px; object-fit: contain; } /* Logo küçültüldü */
-    .epg-title { color: turquoise; font-size: 0.9em; } /* Yazı boyutu ayarlandı */
+    .channel:hover { background: var(--bg-hover); }
+    .channel.active { border-color: var(--accent-color); background: var(--accent-color-darker); }
+    .channel img { width: 38px; height: 38px; object-fit: contain; }
+    .epg-title { color: var(--epg-color); font-size: 0.9em; }
 
-    /* Sabit Oynatıcı (Kontrol Çubuğu) */
     #playerContainer {
-      position: fixed; bottom: 0; left: 0; width: 100%; height: var(--player-height); background: #1a1a1a;
+      position: fixed; bottom: 0; left: 0; width: 100%; height: var(--player-height); background: var(--bg-secondary);
       display: none; z-index: 999; align-items: center; padding: 0 15px;
-      border-top: 2px solid #333;
+      border-top: 2px solid var(--border-color);
       justify-content: space-between;
     }
-    .player-info { display: flex; align-items: center; gap: 12px; } /* Aralık azaltıldı */
-    .player-info img { width: 40px; height: 40px; object-fit: contain; border-radius: 5px; background-color: #d8d8d8; } /* Logo küçültüldü */
-    .player-text .title { font-size: 1em; font-weight: bold; } /* Yazı boyutu küçültüldü */
-    .player-text .telegram { font-size: 0.85em; color: #aaa; } /* Yazı boyutu küçültüldü */
-    .player-controls { display: flex; align-items: center; gap: 12px; } /* Aralık azaltıldı */
+    .player-info { display: flex; align-items: center; gap: 12px; }
+    .player-info img { width: 40px; height: 40px; object-fit: contain; border-radius: 5px; background-color: #d8d8d8; }
+    .player-text .title { font-size: 1em; font-weight: bold; }
+    .player-text .telegram { font-size: 0.85em; color: var(--text-secondary); }
+    .player-controls { display: flex; align-items: center; gap: 12px; }
     .control-btn {
-      background: #2a2a2a; color: white; border: none; font-size: 16px; /* İkon boyutu küçültüldü */
+      background: var(--bg-tertiary); color: var(--text-primary); border: none; font-size: 16px;
       border-radius: 50%; cursor: pointer;
-      width: 36px; height: 36px; /* Buton boyutu küçültüldü */
+      width: 36px; height: 36px;
       display: flex; align-items: center; justify-content: center;
     }
-    .control-btn:hover { background: #3366cc; }
+    .control-btn:hover { background: var(--accent-color); }
 
-    /* Tam Ekran Oynatıcı */
+    /* Tema Seçici Stilleri */
+    #themeSelector {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        margin-left: 15px; /* Kontrol butonlarından biraz ayırmak için */
+    }
+    .theme-swatch {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        cursor: pointer;
+        border: 2px solid var(--border-color);
+        transition: transform 0.2s, border-color 0.2s;
+    }
+    .theme-swatch:hover {
+        transform: scale(1.1);
+    }
+    .theme-swatch.active {
+        border-color: var(--text-primary);
+        box-shadow: 0 0 5px var(--text-primary);
+    }
+
     #fullscreenVideoContainer {
       position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: black;
       display: none; z-index: 1001;
@@ -136,8 +205,7 @@
     #fullscreenVideo { width: 100%; height: 100%; }
   </style>
 </head>
-<body>
-  <div id="app">
+<body data-theme="default"> <div id="app">
     <div id="main">
       <div id="channels"></div>
       <div id="previewArea">
@@ -161,6 +229,7 @@
       </div>
     </div>
     <div class="player-controls">
+      <div id="themeSelector"></div> 
       <button class="control-btn" onclick="changeChannel(-1)">&#9664;</button>
       <button class="control-btn" onclick="changeChannel(1)">&#9654;</button>
       <button class="control-btn" onclick="toggleFullscreen()">&#x26F6;</button>
@@ -190,11 +259,46 @@
         fullscreen: {
             container: document.getElementById("fullscreenVideoContainer"),
             video: document.getElementById("fullscreenVideo")
-        }
+        },
+        themeSelector: document.getElementById("themeSelector")
+    };
+    
+    // TEMA TANIMLAMALARI
+    const themes = {
+        'default': { name: 'Varsayılan', color: '#3366cc' },
+        'forest': { name: 'Orman', color: '#4CAF50' },
+        'royal': { name: 'Kraliyet', color: '#9C27B0' },
+        'sunset': { name: 'Gün Batımı', color: '#FF5722' },
+        'steel': { name: 'Çelik', color: '#757575' }
     };
 
     let allChannels = [], epgData = {}, currentChannelList = [], hls, hlsFs;
     let currentChannelIndex = -1;
+
+    // YENİ: Tema değiştirme fonksiyonu
+    function applyTheme(themeName) {
+        document.body.dataset.theme = themeName;
+        localStorage.setItem('iptvTheme', themeName); // Temayı kaydet
+
+        // Aktif olan swatch'ı güncelle
+        document.querySelectorAll('.theme-swatch').forEach(swatch => {
+            swatch.classList.toggle('active', swatch.dataset.theme === themeName);
+        });
+    }
+
+    // YENİ: Tema seçici butonları oluşturan fonksiyon
+    function createThemeSelector() {
+        for (const [key, theme] of Object.entries(themes)) {
+            const swatch = document.createElement('div');
+            swatch.className = 'theme-swatch';
+            swatch.dataset.theme = key;
+            swatch.title = theme.name;
+            swatch.style.backgroundColor = theme.color;
+            swatch.onclick = () => applyTheme(key);
+            G_UI.themeSelector.appendChild(swatch);
+        }
+    }
+
 
     async function fetchM3U() {
       const res = await fetch(m3uUrl);
@@ -375,6 +479,11 @@
     });
 
     window.addEventListener("load", async () => {
+      // YENİ: Tema seçiciyi ve kayıtlı temayı yükle
+      createThemeSelector();
+      const savedTheme = localStorage.getItem('iptvTheme') || 'default';
+      applyTheme(savedTheme);
+
       await fetchM3U();
       await fetchEPG();
       listGroups();
