--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
     
     const extraMusicChannels = [
         { name: "Number 1 TV", logo: "https://i.ibb.co/sybLTBG/nr1.png", group: "Müzik Ekstra", epgId: "Number1TV.tr", url: "https://b01c02nl.mediatriple.net/videoonlylive/mtkgeuihrlfwlive/u_stream_5c9e17cd6360b_1/playlist.m3u8" },
-        { name: "KRAL POP", logo: "https://i.ibb.co/vk0bKz0/kral-pop.png", group: "Müzik Ekstra", epgId: "Kral.Pop.Radyo.tr", url: "http://dygvideo.dygdigital.com/live/hls/kralpop" },
+        { name: "KRAL POP", logo: "https://i.ibb.co/vk0bKz0/kral-pop.png", group: "Müzik Ekstra", epgId: "Kral.Pop.Radyo.tr", url: "https://dogus-live.daioncdn.net/kralpoptv/playlist.m3u8" },
         { name: "Number 1 Ask", logo: "https://i.ibb.co/5cJ0KtQ/nr1-ask.png", group: "Müzik Ekstra", epgId: "Number1Ask.tr", url: "https://b01c02nl.mediatriple.net/videoonlylive/mtkgeuihrlfwlive/u_stream_5c9e18f9cea15_1/playlist.m3u8" },
         { name: "Number 1 Damar", logo: "https://i.ibb.co/2yCF7ms/nr1-damar.png", group: "Müzik Ekstra", epgId: "Number1Damar.tr", url: "https://b01c02nl.mediatriple.net/videoonlylive/mtkgeuihrlfwlive/u_stream_5c9e198784bdc_1/playlist.m3u8" },
         { name: "Number 1 Dance", logo: "https://i.ibb.co/kXFSFTN/nr1-dance.png", group: "Müzik Ekstra", epgId: "Number1Dance.tr", url: "https://b01c02nl.mediatriple.net/videoonlylive/mtkgeuihrlfwlive/u_stream_5c9e2aa8acf44_1/playlist.m3u8" },
-        { name: "NR1 FASHION ONE", logo: "https://i.ibb.co/HV0x9JZ/fashion-one.png", group: "Müzik Ekstra", epgId: "", url: "http://b01c02nl.mediatriple.net/videoonlylive/mtkgeuihrlfwlive/u_stream_5c9e2ee6997cb_1/playlist.m3u8" },
+        { name: "NR1 FASHION ONE", logo: "https://i.ibb.co/HV0x9JZ/fashion-one.png", group: "Müzik Ekstra", epgId: "", url: "https://b01c02nl.mediatriple.net/videoonlylive/mtkgeuihrlfwlive/u_stream_5c9e2ee6997cb_1/playlist.m3u8" },
         { name: "TRT Muzik", logo: "https://i.ibb.co/4gbPpzC/trt-muzik.png", group: "Müzik Ekstra", epgId: "TRTMuzik.tr", url: "https://tv-trtmuzik.medya.trt.com.tr/master_720.m3u8" },
         { name: "PowerTurk TV", logo: "https://i.ibb.co/xXcBD2C/powerturk.png", group: "Müzik Ekstra", epgId: "PowerTurkTV.tr", url: "https://livetv.powerapp.com.tr/powerturkTV/powerturkhd.smil/chunks.m3u8" },
         { name: "Power TV", logo: "https://i.ibb.co/JrXDQJy/power-tv.png", group: "Müzik Ekstra", epgId: "PowerTV.tr", url: "https://livetv.powerapp.com.tr/powerTV/powerhd.smil/chunks.m3u8" },
@@ -528,3 +528,4 @@
   </script>
 </body>
 </html>
+
