--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         { name: "TRT Muzik", logo: "https://i.ibb.co/4gbPpzC/trt-muzik.png", group: "Müzik Ekstra", epgId: "TRTMuzik.tr", url: "https://tv-trtmuzik.medya.trt.com.tr/master_720.m3u8" },
         { name: "PowerTurk TV", logo: "https://i.ibb.co/xXcBD2C/powerturk.png", group: "Müzik Ekstra", epgId: "PowerTurkTV.tr", url: "https://livetv.powerapp.com.tr/powerturkTV/powerturkhd.smil/chunks.m3u8" },
         { name: "Power TV", logo: "https://i.ibb.co/JrXDQJy/power-tv.png", group: "Müzik Ekstra", epgId: "PowerTV.tr", url: "https://livetv.powerapp.com.tr/powerTV/powerhd.smil/chunks.m3u8" },
-        { name: "POWER TURK TAPTAZE", logo: "https://i.ibb.co/F5K5xs9/powerturk-taptaze.png", group: "Müzik Ekstra", epgId: "", url: "http://livetv.powerapp.com.tr/pturktaptaze/taptaze.smil/playlist.m3u8" },
+        { name: "POWER TURK TAPTAZE", logo: "https://i.ibb.co/F5K5xs9/powerturk-taptaze.png", group: "Müzik Ekstra", epgId: "", url: "https://livetv.powerapp.com.tr/pturktaptaze/taptaze.smil/playlist.m3u8" },
         { name: "POWER DANCE", logo: "https://i.ibb.co/5hwZ7xw/power-dance.png", group: "Müzik Ekstra", epgId: "", url: "https://listen.powerapp.com.tr/dance/dance.smil/chunks.m3u8" },
         { name: "POWER LOVE", logo: "https://i.ibb.co/bJL1VnX/power-love.png", group: "Müzik Ekstra", epgId: "", url: "https://listen.powerapp.com.tr/plove/love.smil/chunks.m3u8" },
         { name: "POWER TURK AKUSTIK", logo: "https://i.ibb.co/XFY7dCW/powerturk-akustik.png", group: "Müzik Ekstra", epgId: "", url: "https://listen.powerapp.com.tr/pturkakustik/akustik.smil/chunks.m3u8" },
@@ -528,4 +528,5 @@
   </script>
 </body>
 </html>
+
 
