--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 
   <script>
-    const m3uUrl = "https://kablo-m3u.atakan-19833.workers.dev/?file=mehmet_guncel.m3";
+    const m3uUrl = "https://kablo-m3u.atakan-19833.workers.dev/?file=mehmet_guncel.m3u";
     const epgUrl = "https://kablo-m3u.atakan-19833.workers.dev/?file=kabloepg.xml";
 
     const G_UI = {
@@ -528,4 +528,5 @@
   </script>
 </body>
 </html>
+
 
