--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
   </div>
 
   <script>
-    const m3uUrl = "https://kablo-m3u.atakan-19833.workers.dev/?file=mehmet_guncel.m3u";
-    const epgUrl = "https://kablo-m3u.atakan-19833.workers.dev/?file=kabloepg.xml";
+    const m3uUrl = "";
+    const epgUrl = "";
 
     const G_UI = {
         groups: document.getElementById("groups"),
@@ -528,6 +528,7 @@
   </script>
 </body>
 </html>
+
 
 
 
