--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         // Ulusal
         { name: 'TRT 1', url: 'https://tv-trt1.medya.trt.com.tr/master_720.m3u8', logo: 'https://upload.wikimedia.org/wikipedia/commons/4/4a/TRT1_Logo_2020-2021.jpg?20200512090317', group: 'Ulusal', epgId: '' },
         { name: 'ATV HD', url: 'https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv.m3u8', logo: 'https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/ATV.tr.png', group: 'Ulusal', epgId: '' },
-        { name: 'ATV HD 2', url: 'https://sultanweb.info/TurkSATB.php?ID=13351', logo: 'https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/ATV.tr.png', group: 'Ulusal', epgId: '' },
+        { name: 'ATV HD 2', url: 'http://sultanweb.info/TurkSATB.php?ID=13351', logo: 'https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/ATV.tr.png', group: 'Ulusal', epgId: '' },
         { name: 'KANAL D', url: 'https://demiroren-live.daioncdn.net/kanald/kanald_1080p.m3u8?app=kanald_web&ce=3', logo: 'https://i.ibb.co/hf2mSz5/kanal-d.png', group: 'Ulusal', epgId: '' },
         { name: 'STAR TV', url: 'https://dogus-live.daioncdn.net/startv/startv_720p.m3u8', logo: 'https://i.ibb.co/hY3Z8zx/star-tv.png', group: 'Ulusal', epgId: '' },
         { name: 'SHOW TV', url: 'https://ciner-live.daioncdn.net/showtv/showtv_1080p.m3u8', logo: 'https://i.ibb.co/Rv0rWhZ/show.png', group: 'Ulusal', epgId: '' },
@@ -613,6 +613,7 @@
   </script>
 </body>
 </html>
+
 
 
 
