--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         { name: 'HABER GLOBAL', url: 'https://tv.ensonhaber.com/haberglobal/haberglobal_720p.m3u8', logo: 'https://i.ibb.co/21zzHPgT/Ads-z-tasar-m-7.png', group: 'Ulusal Haber', epgId: '' },
         { name: 'BLOOMBERG HT', url: 'https://ciner-live.daioncdn.net/bloomberght/bloomberght_720p.m3u8', logo: 'https://i.ibb.co/0RhF7QQB/Ads-z-tasar-m-8.png', group: 'Ulusal Haber', epgId: '' },
         { name: 'HABERTURK', url: 'https://ciner-live.daioncdn.net/haberturktv/haberturktv_1080p.m3u8', logo: 'https://i.ibb.co/Q79Lh4Cb/Ads-z-tasar-m-9.png', group: 'Ulusal Haber', epgId: '' },
-        { name: '24', url: 'https://mn-nl.mncdn.com/kanal24/kanal24.smil/chunklist_b896000.m3u8', logo: 'https://i.ibb.co/tHQpWvn/24.png', group: 'Ulusal Haber', epgId: '' },
+        { name: '24 TV HD', url: 'https://turkmedya-live.ercdn.net/tv24/tv24.m3u8', logo: 'https://i.ibb.co/tHQpWvn/24.png', group: 'Ulusal Haber', epgId: '' },
         { name: 'TVNET', url: 'https://mn-nl.mncdn.com/tvnet/tvnet/playlist.m3u8', logo: 'https://i.ibb.co/RpyvJDrM/Ads-z-tasar-m-12.png', group: 'Ulusal Haber', epgId: '' },
         { name: 'AKIT TV', url: 'https://akittv-live.ercdn.net/akittv/akittv_720p.m3u8', logo: 'https://i.ibb.co/3mPpV9kp/Ads-z-tasar-m-11.png', group: 'Ulusal Haber', epgId: '' },
         { name: 'BENGU TURK', url: 'https://tv.ensonhaber.com/benguturk/benguturk_720p.m3u8', logo: 'https://i.ibb.co/CHWhMvQ/bengu-turk.png', group: 'Ulusal Haber', epgId: '' },
@@ -681,4 +681,5 @@
     });
   </script>
 </body>
+
 </html>
