--- a/index.html
+++ b/index.html
@@ -313,22 +313,14 @@ https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/aspor/aspor_1080p.m3u8
 
 #EXTINF:-1 tvg-id="HaberturkTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/HaberturkTV.tr.png" group-title="Haber",Haber Türk
 https://ciner-live.daioncdn.net/haberturktv/haberturktv.m3u8
+
+
+
 #EXTINF:-1 tvg-id="ATV.HD" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/ATV.tr.png" group-title="Ulusal",ATV HD 2
-http://proxylendim101010.mywire.org/proxy.php?url=https://five.04bf112a615942b5.sbs/yayinatv.m3u8
-https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv_480p.m3u8
-https://izle.canlitvapp.com/aytv/index.m3u8
 https://trn03.tulix.tv/gt-a-tv-tv/index.m3u8
-https://live.tecostream.xyz/Atv.php
-https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv_480p.m3u8
-https://izle.canlitvapp.com/aytv/index.m3u8
-https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv_720p.m3u8
-https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv.m3u8
-https://mth.tc/atv1
-http://89.187.191.41/ATV-HD-TR/video.m3u8
-http://95.174.71.114:80/TR-ATV/index.m3u8
-http://116.202.238.88/ATV_TR/tracks-v1a1/index.m3u8
-https://mth.tc/atv2
-https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv.m3u8#EXTINF:-1 tvg-id="HT SPOR" tvg-logo="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Ht-spor-buyuk.webp/275px-Ht-spor-buyuk.webp.png" group-title="Spor",HT SPOR
+
+
+#EXTINF:-1 tvg-id="HT SPOR" tvg-logo="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Ht-spor-buyuk.webp/275px-Ht-spor-buyuk.webp.png" group-title="Spor",HT SPOR
 https://ciner-live.daioncdn.net/ht-spor/ht-spor_1080p.m3u8
 #EXTINF:-1 tvg-id="HalkTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/HalkTV.tr.png" group-title="Haber",Halk TV
 https://halktv-live.daioncdn.net/halktv/halktv.m3u8
@@ -656,6 +648,7 @@ https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
   </script>
 </body>
 </html>
+
 
 
 
