--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ https://ciner-live.daioncdn.net/showtv/showtv.m3u8
 #EXTINF:-1 tvg-id="SportsTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/SportsTV.tr.png" group-title="Spor",Sports TV
 https://live.sportstv.com.tr/hls/low/sportstv.m3u8
 #EXTINF:-1 tvg-id="StarTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/StarTV.tr.png" group-title="Ulusal",Star
-https://dogus-live.daioncdn.net/startv/startv.m3u8
+https://raw.githubusercontent.com/ipstreet312/freeiptv/refs/heads/master/ressources/tur/star.m3u8
 #EXTINF:-1 tvg-id="Teve2.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/Teve2.tr.png" group-title="Ulusal",Teve2
 https://demiroren-live.daioncdn.net/teve2/teve2.m3u8
 #EXTINF:-1 tvg-id="TLC.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TLC.tr.png" group-title="Eğlence",TLC
@@ -371,8 +371,10 @@ https://tv-trtspor1.medya.trt.com.tr/master_720.m3u8
 https://tv-trtspor2.medya.trt.com.tr/master.m3u8
 #EXTINF:-1 tvg-id="TRTTurk.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TRTTurk.tr.png" group-title="Belgesel",TRT Türk
 https://tv-trtturk.medya.trt.com.tr/master.m3u8
+
 #EXTINF:-1 tvg-id="TV8.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TV8.tr.png" group-title="Eğlence",TV 8
-https://tv8-live.daioncdn.net/tv8/tv8.m3u8
+https://tv8.daioncdn.net/tv8/tv8_720p.m3u8?&sid=7tr9yvr73465&app=7ddc255a-ef47-4e81-ab14-c0e5f2949788&ce=3
+
 #EXTINF:-1 tvg-id="TV85.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TV85.tr.png" group-title="Eğlence",TV 8.5
 https://tv8-live.daioncdn.net/tv8bucuk/tv8bucuk_1080p.m3u8
 #EXTINF:-1 tvg-id="TV100.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TV100.tr.png" group-title="Haber",TV 100
@@ -418,7 +420,7 @@ https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
         { name: 'TRT 1', url: 'https://tv-trt1.medya.trt.com.tr/master_720.m3u8', logo: 'https://upload.wikimedia.org/wikipedia/commons/4/4a/TRT1_Logo_2020-2021.jpg?20200512090317', group: 'Ulusal', epgId: '' },
         { name: 'ATV HD', url: 'https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv.m3u8', logo: 'https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/ATV.tr.png', group: 'Ulusal', epgId: '' },
         { name: 'KANAL D', url: 'https://demiroren-live.daioncdn.net/kanald/kanald_1080p.m3u8?app=kanald_web&ce=3', logo: 'https://i.ibb.co/hf2mSz5/kanal-d.png', group: 'Ulusal', epgId: '' },
-        { name: 'STAR TV', url: 'https://dogus-live.daioncdn.net/startv/startv_720p.m3u8', logo: 'https://i.ibb.co/hY3Z8zx/star-tv.png', group: 'Ulusal', epgId: '' },
+        { name: 'STAR TV', url: 'https://trn03.tulix.tv/gt-star-tv/index.m3u8', logo: 'https://i.ibb.co/hY3Z8zx/star-tv.png', group: 'Ulusal', epgId: '' },
         { name: 'SHOW TV', url: 'https://ciner-live.daioncdn.net/showtv/showtv_1080p.m3u8', logo: 'https://i.ibb.co/Rv0rWhZ/show.png', group: 'Ulusal', epgId: '' },
         { name: 'NOW', url: 'http://116.202.238.88/FOXTV_TR/index.m3u8', logo: 'https://images.seeklogo.com/logo-png/51/1/now-tv-turkey-logo-png_seeklogo-519520.png', group: 'Ulusal', epgId: '' },
         { name: 'TV 8', url: 'https://tv8-live.daioncdn.net/tv8/tv8_1080p.m3u8', logo: 'https://i.ibb.co/Kr5SFY1/tv8.png', group: 'Ulusal', epgId: '' },
@@ -445,7 +447,7 @@ https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
         { name: 'TJK TV YURT DISI', url: 'https://tjktv-live.tjk.org/tjktv2/tjktv2_1080p.m3u8', logo: 'https://i.ibb.co/PrkXrRn/tjk-tv.png', group: 'Spor', epgId: '' },
         // Belgesel
         { name: 'TRT BELGESEL', url: 'https://tv-trtbelgesel.medya.trt.com.tr/master_720.m3u8', logo: 'https://i.ibb.co/MkvY46q/trt-belgesel.png', group: 'Belgesel', epgId: '' },
-        { name: 'DMAX', url: 'https://dogus-live.daioncdn.net/dmax/dmax_720p.m3u8', logo: 'https://i.ibb.co/1LH22gK/dmax.png', group: 'Belgesel', epgId: '' },
+        { name: 'DMAX', url: 'https://trn03.tulix.tv/gt-dmax-tv/index.m3u8', logo: 'https://i.ibb.co/1LH22gK/dmax.png', group: 'Belgesel', epgId: '' },
         { name: 'TLC', url: 'https://dogus-live.daioncdn.net/tlc/tlc_720p.m3u8', logo: 'https://i.ibb.co/Cm1nYZK/tlc.png', group: 'Belgesel', epgId: '' },
         { name: 'TRT AVAZ', url: 'https://tv-trtavaz.medya.trt.com.tr/master_720.m3u8', logo: 'https://i.ibb.co/Mnhmxsn/trt-avaz.png', group: 'Belgesel', epgId: '' },
         // Ulusal Haber
@@ -647,12 +649,3 @@ https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
