--- a/index.html
+++ b/index.html
@@ -325,16 +325,23 @@ https://ciner-live.daioncdn.net/ht-spor/ht-spor_1080p.m3u8
 https://halktv-live.daioncdn.net/halktv/halktv.m3u8
 #EXTINF:-1 tvg-id="Kanal7.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/Kanal7.tr.png" group-title="Ulusal",Kanal 7
 https://kanal7-live.daioncdn.net/kanal7/kanal7.m3u8
+
+
 #EXTINF:-1 tvg-id="KanalD.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/KanalD.tr.png" group-title="Ulusal",Kanal D
-https://demiroren-live.daioncdn.net/kanald/kanald.m3u8
+http://95.174.71.114:80/TR-KANAL-D/index.m3u8
+
+
 #EXTINF:-1 tvg-id="MinikaCocuk.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/MinikaCocuk.tr.png" group-title="Çocuk",Minika Çocuk
 https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/minikago_cocuk/minikago_cocuk_720p.m3u8
 #EXTINF:-1 tvg-id="MinikaGo.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/MinikaGo.tr.png" group-title="Çocuk",Minika GO
 https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/minikago/minikago_720p.m3u8
 #EXTINF:-1 tvg-id="NOWTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/NOWTV.tr.png" group-title="Ulusal",NOW
 https://uycyyuuzyh.turknet.ercdn.net/nphindgytw/nowtv/nowtv.m3u8
+
 #EXTINF:-1 tvg-id="NTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/NTV.tr.png" group-title="Ulusal",NTV
-https://dogus-live.daioncdn.net/ntv/ntv.m3u8
+https://raw.githubusercontent.com/ipstreet312/freeiptv/master/ressources/tur/ntv.m3u8
+
+
 #EXTINF:-1 tvg-id="Number1TV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/Number1TV.tr.png" group-title="Müzik",Number 1 TV
 https://b01c02nl.mediatriple.net/videoonlylive/mtkgeuihrlfwlive/u_stream_5c9e17cd6360b_1/playlist.m3u8
 #EXTINF:-1 tvg-id="PowerTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/PowerTV.tr.png" group-title="Müzik",Power TV
@@ -342,7 +349,7 @@ https://livetv.powerapp.com.tr/powerTV/powerhd.smil/playlist.m3u8
 
 
 #EXTINF:-1 tvg-id="ShowTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/ShowTV.tr.png" group-title="Ulusal",Show TV
-https://ciner-live.daioncdn.net/showtv/showtv.m3u8
+https://rmtftbjlne.turknet.ercdn.net/bpeytmnqyp/showtv/showtv.m3u8
 
 #EXTINF:-1 tvg-id="SportsTV.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/SportsTV.tr.png" group-title="Spor",Sports TV
 https://live.sportstv.com.tr/hls/low/sportstv.m3u8
@@ -373,10 +380,15 @@ https://tv-trtspor2.medya.trt.com.tr/master.m3u8
 https://tv-trtturk.medya.trt.com.tr/master.m3u8
 
 #EXTINF:-1 tvg-id="TV8.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TV8.tr.png" group-title="Eğlence",TV 8
-https://tv8.daioncdn.net/tv8/tv8_720p.m3u8?&sid=7tr9yvr73465&app=7ddc255a-ef47-4e81-ab14-c0e5f2949788&ce=3
+https://tv8.daioncdn.net/tv8/tv8.m3u8?app=7ddc255a-ef47-4e81-ab14-c0e5f2949788&ce=3
+
 
 #EXTINF:-1 tvg-id="TV85.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TV85.tr.png" group-title="Eğlence",TV 8.5
 https://tv8-live.daioncdn.net/tv8bucuk/tv8bucuk_1080p.m3u8
+#EXTINF:-1 tvg-id="TV100.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TV100.tr.png" group-title="Haber",TV 100
+https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
+
+
 #EXTINF:-1 tvg-id="TV100.tr" tvg-logo="https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/TV100.tr.png" group-title="Haber",TV 100
 https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
 
@@ -419,9 +431,9 @@ https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
         // Ulusal
         { name: 'TRT 1', url: 'https://tv-trt1.medya.trt.com.tr/master_720.m3u8', logo: 'https://upload.wikimedia.org/wikipedia/commons/4/4a/TRT1_Logo_2020-2021.jpg?20200512090317', group: 'Ulusal', epgId: '' },
         { name: 'ATV HD', url: 'https://rnttwmjcin.turknet.ercdn.net/lcpmvefbyo/atv/atv.m3u8', logo: 'https://raw.githubusercontent.com/ghokun/tv/main/bin/logo/ATV.tr.png', group: 'Ulusal', epgId: '' },
-        { name: 'KANAL D', url: 'https://demiroren-live.daioncdn.net/kanald/kanald_1080p.m3u8?app=kanald_web&ce=3', logo: 'https://i.ibb.co/hf2mSz5/kanal-d.png', group: 'Ulusal', epgId: '' },
-        { name: 'STAR TV', url: 'https://trn03.tulix.tv/gt-star-tv/index.m3u8', logo: 'https://i.ibb.co/hY3Z8zx/star-tv.png', group: 'Ulusal', epgId: '' },
-        { name: 'SHOW TV', url: 'https://ciner-live.daioncdn.net/showtv/showtv_1080p.m3u8', logo: 'https://i.ibb.co/Rv0rWhZ/show.png', group: 'Ulusal', epgId: '' },
+        { name: 'KANAL D', url: 'http://95.174.71.114:80/TR-KANAL-D/index.m3u8', logo: 'https://i.ibb.co/hf2mSz5/kanal-d.png', group: 'Ulusal', epgId: '' },
+        { name: 'STAR TV', url: 'https://raw.githubusercontent.com/ipstreet312/freeiptv/refs/heads/master/ressources/tur/star.m3u8', logo: 'https://i.ibb.co/hY3Z8zx/star-tv.png', group: 'Ulusal', epgId: '' },
+        { name: 'SHOW TV', url: 'https://rmtftbjlne.turknet.ercdn.net/bpeytmnqyp/showtv/showtv.m3u8', logo: 'https://i.ibb.co/Rv0rWhZ/show.png', group: 'Ulusal', epgId: '' },
         { name: 'NOW', url: 'http://116.202.238.88/FOXTV_TR/index.m3u8', logo: 'https://images.seeklogo.com/logo-png/51/1/now-tv-turkey-logo-png_seeklogo-519520.png', group: 'Ulusal', epgId: '' },
         { name: 'TV 8', url: 'https://tv8-live.daioncdn.net/tv8/tv8_1080p.m3u8', logo: 'https://i.ibb.co/Kr5SFY1/tv8.png', group: 'Ulusal', epgId: '' },
         { name: 'EURO D', url: 'https://thema-vivekanald-rakuten.amagi.tv/playlist.m3u8', logo: 'https://i.ibb.co/jMQTJmh/euro-d.png', group: 'Ulusal', epgId: '' },
@@ -447,12 +459,12 @@ https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
         { name: 'TJK TV YURT DISI', url: 'https://tjktv-live.tjk.org/tjktv2/tjktv2_1080p.m3u8', logo: 'https://i.ibb.co/PrkXrRn/tjk-tv.png', group: 'Spor', epgId: '' },
         // Belgesel
         { name: 'TRT BELGESEL', url: 'https://tv-trtbelgesel.medya.trt.com.tr/master_720.m3u8', logo: 'https://i.ibb.co/MkvY46q/trt-belgesel.png', group: 'Belgesel', epgId: '' },
-        { name: 'DMAX', url: 'https://trn03.tulix.tv/gt-dmax-tv/index.m3u8', logo: 'https://i.ibb.co/1LH22gK/dmax.png', group: 'Belgesel', epgId: '' },
+        { name: 'DMAX', url: 'http://78.128.125.60:9980/play/a01w/index.m3u8', logo: 'https://i.ibb.co/1LH22gK/dmax.png', group: 'Belgesel', epgId: '' },
         { name: 'TLC', url: 'https://dogus-live.daioncdn.net/tlc/tlc_720p.m3u8', logo: 'https://i.ibb.co/Cm1nYZK/tlc.png', group: 'Belgesel', epgId: '' },
         { name: 'TRT AVAZ', url: 'https://tv-trtavaz.medya.trt.com.tr/master_720.m3u8', logo: 'https://i.ibb.co/Mnhmxsn/trt-avaz.png', group: 'Belgesel', epgId: '' },
         // Ulusal Haber
         { name: 'TRT HABER', url: 'https://tv-trthaber.medya.trt.com.tr/master_720.m3u8', logo: 'https://i.ibb.co/LzcNGmm8/unnamed.png', group: 'Ulusal Haber', epgId: '' },
-        { name: 'BLOOMBERG HT', url: 'https://ciner-live.daioncdn.net/bloomberght/bloomberght_720p.m3u8', logo: 'https://i.ibb.co/0RhF7QQB/Ads-z-tasar-m-8.png', group: 'Ulusal Haber', epgId: '' },
+        { name: 'BLOOMBERG HT', url: 'https://ensonhaber-live.ercdn.net/bloomberght/bloomberght.m3u8', logo: 'https://i.ibb.co/0RhF7QQB/Ads-z-tasar-m-8.png', group: 'Ulusal Haber', epgId: '' },
         { name: 'HABERTURK', url: 'https://ciner-live.daioncdn.net/haberturktv/haberturktv_1080p.m3u8', logo: 'https://i.ibb.co/Q79Lh4Cb/Ads-z-tasar-m-9.png', group: 'Ulusal Haber', epgId: '' },
         { name: '24 TV HD', url: 'https://turkmedya-live.ercdn.net/tv24/tv24.m3u8', logo: 'https://i.ibb.co/tHQpWvn/24.png', group: 'Ulusal Haber', epgId: '' },
         { name: 'TVNET', url: 'https://mn-nl.mncdn.com/tvnet/tvnet/playlist.m3u8', logo: 'https://i.ibb.co/RpyvJDrM/Ads-z-tasar-m-12.png', group: 'Ulusal Haber', epgId: '' },
