--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Car Video Pro TV</title>
@@ -658,6 +659,7 @@ https://tv100-live.daioncdn.net/tv100/tv100_1080p.m3u8
   </script>
 </body>
 </html>
+
 
 
 
