--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
       <div id="previewArea">
         <div id="previewPlaceholder">
           <h1>Car Video Pro TV</h1>
+          <h2>İletişim : Telegram : t.me/car_video_pro</h2>
+
           <h2>Tam Ekran için 2 kez Tıklayın</h2>
           <p>Lütfen bir kategori seçip kanala tıklayınız.</p>
         </div>
@@ -673,3 +675,4 @@
   </script>
 </body>
 </html>
+
