--- a/index.html
+++ b/index.html
@@ -306,11 +306,10 @@
       <div id="channels"></div>
       <div id="previewArea">
         <div id="previewPlaceholder">
-          <h1>Car Video Pro TV</h1>
-          <h2>İletişim : Telegram : t.me/car_video_pro</h2>
-
-          <h2>Tam Ekran için 2 kez Tıklayın</h2>
-          <p>Lütfen bir kategori seçip kanala tıklayınız.</p>
+          <h1> 📺 Car Video Pro TV 📺</h1>
+          <h2> 📞 İletişim : Telegram : t.me/car_video_pro 📞</h2>
+          <h2> 🖥️ Tam Ekran için 2 kez Tıklayın 🖥️ </h2>
+          <p>✔️ Lütfen bir kategori seçip kanala tıklayınız. ✔️</p>
         </div>
         <video id="previewVideo" autoplay playsinline></video>
         
@@ -675,4 +674,3 @@
   </script>
 </body>
 </html>
-
